# PyMD

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile.backend  LICENSE  MANIFEST.in  PYPI_INSTRUCTIONS.md  PyMD_Syntax_Guide.md  README.md  docker-compose.yml  example-complex.pymd  example-simple.pymd  example.pymd  pymd_cli.py  pymd_renderer.py  pymd_server.py  pyproject.toml  requirements.txt  simple_cli.py  test_basic.py  test_pymd.py  test_simple.pymd
docker/executor/: .dockerignore  Dockerfile  README.md  execute.py  test_executor.sh  test_integration.py
docs/: AUTH0_SETUP_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INDEX.md  LICENSE  QUICK_START.md  README_PHASE1.md  SECURITY.md
examples/: example-simple.pymd  example.pymd
plans/: 00_implementation_summary.md  01_system_architecture.md  02_api_specifications.md  03_storage_schema.md  04_auth0_integration.md  05_frontend_architecture.md  06_user_environments.md  CHANGELOG.md  INDEX.md  QUICK_REFERENCE.md  README.md
pymd/: __init__.py  api_routes.py  cli.py  code_executor.py  file_watcher.py  html_generator.py  image_handler.py  logger.py  markdown_processor.py  pdf_exporter.py  pymd_elements.py  renderer.py  server.py  static_routes.py  templates.py  video_handler.py
pymd/backend/: alembic.ini  requirements.txt
pymd/backend/alembic/: env.py
pymd/backend/alembic/versions/: 20250118_0000_initial_schema.py  20251029_0001_add_user_environments.py
pymd/backend/app/: __init__.py  config.py  main.py
pymd/backend/app/api/v1/: auth.py  documents.py  environments.py  health.py  packages.py  render.py  users.py
pymd/backend/app/core/: database.py  redis.py  security.py
pymd/backend/app/models/: __init__.py  document.py  environment.py  environment_execution.py  environment_package.py  session.py  user.py  user_settings.py
pymd/backend/app/schemas/: __init__.py  auth.py  document.py  environment.py  render.py  user.py
pymd/backend/app/services/: docker_executor_service.py  document_service.py  environment_service.py  package_service.py  render_service.py
pymd/backend/tests/: test_api_environments.py
pymd/static/css/: pymd.css
pymd/static/js/: dark-mode.js
pymd_frontend/: .example.env.local  Dockerfile  Dockerfile.dev  README.md  middleware.ts  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts
pymd_frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
pymd_frontend/app/api/auth/[auth0]/: route.ts
pymd_frontend/app/api/backend/[...path]/: route.ts
pymd_frontend/app/dashboard/: layout.tsx  page.tsx
pymd_frontend/app/documents/: page.tsx
pymd_frontend/app/documents/[id]/: page.tsx
pymd_frontend/app/documents/new/: page.tsx
pymd_frontend/components/documents/: document-card.tsx  document-editor.tsx  document-empty-state.tsx  document-list.tsx  document-preview.tsx  document-skeleton.tsx  document-status-bar.tsx  document-toolbar.tsx
pymd_frontend/components/environments/: environment-manager.tsx  environment-selector.tsx  package-installer.tsx  package-list.tsx
pymd_frontend/components/layout/: footer.tsx  header.tsx
pymd_frontend/components/providers/: theme-provider.tsx
pymd_frontend/components/ui/: button.tsx  dropdown-menu.tsx  input.tsx  textarea.tsx
pymd_frontend/hooks/: use-toast.ts  useDocuments.ts
pymd_frontend/lib/api/: documents.ts  environments.ts  packages.ts
pymd_frontend/middleware.ts/: middleware.ts.new
pymd_frontend/stores/: editorStore.ts  environmentStore.ts  uiStore.ts
pymd_frontend/types/: document.ts  environment.ts
tests/: README.md  __init__.py  conftest.py  test_basic_functionality.py  test_caching_performance.py  test_code_execution.py  test_new_syntax.py  test_runner.py  test_styling.py
