[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyexecmd"
version = "0.1.7"
description = "Python-Powered Markdown with executable code and dynamic content"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PyExecMD Team"}
]
maintainers = [
    {name = "PyExecMD Team"}
]
keywords = ["markdown", "python", "documentation", "jupyter", "notebook"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Markup",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "Flask>=3.0.0",
    "Flask-SocketIO>=5.3.0",
    "matplotlib>=3.8.0",
    "pandas>=2.1.0",
    "numpy>=2.0.0",
    "watchdog>=6.0.0",
    "python-socketio>=5.8.0",
    "Werkzeug>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
"Homepage" = "https://github.com/treeleaves30760/PyMD"
"Bug Reports" = "https://github.com/treeleaves30760/PyMD/issues"
"Source" = "https://github.com/treeleaves30760/PyMD"

[project.scripts]
pyexecmd = "pymd.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pymd*"]

[tool.setuptools.package-data]
pymd = ["*.html", "*.css", "*.js"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
